CKA-Certified-Kubernetes-Administrator/exercises/15-gateway-api/gw-infra/gw-infra.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: exercise-15
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: exercise-15
spec:
  gatewayClassName: cloud-provider-kind   # Must match the cluster GatewayClass!
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
